# finder-chart-generator

./: .dockerignore  .eslintrc.json  .flake8  .gitignore  Dockerfile  README.md  angular.json  docker-compose.yml  lint.sh  mypy.ini  package-lock.json  package.json  pyproject.toml
deployment/: _deploy.sh
fcg/: main.py
fcg/infrastructure/: parse.py  types.py
fcg/viewmodels/: base_viewmodel.py  ephemerides_viewmodel.py  form_base_viewmodel.py  hrs_viewmodel.py  imaging_viewmodel.py  index_viewmodel.py  longslit_viewmodel.py  mos_viewmodel.py  nir_viewmodel.py  parse.py  slotmode_viewmodel.py  smi_viewmodel.py
fcg/views/: ephemerides.py  finder_charts.py  forms.py  index.py
infrastructure/: parse.py
jenkins/: Dockerfile  Jenkinsfile  README.md
jenkins/agent/: Dockerfile
jenkins/dev/: Jenkinsfile
jenkins/dev-deployment/: Dockerfile  Jenkinsfile  README.md  deploy.sh  prepare_docker_compose.sh
src/: index.html
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/generator-form/: generator-form.component.html  generator-form.component.spec.ts  generator-form.component.ts
static/: index.js  styles.css
templates/: index.html
templates/forms/: hrs.html  imaging.html  longslit.html  mos.html  nir.html  slot_mode.html  slotmode.html  smi.html
templates/shared/: background_image.html  bundle_separation.html  calculate_position_angle.html  declination.html  fits_image.html  forms.html  image_survey.html  include_smi_fibers.html  mos_mask_file.html  nir_bundle_separation.html  position_angle.html  principal_investigator.html  proposal_code.html  reference_star_declination.html  reference_star_right_ascension.html  right_ascension.html  science_bundle_declination.html  science_bundle_right_ascension.html  slit_width.html  smi_barcode.html  submit.html  target.html
tests/: conftest.py
tests/data/: ra170.1_dec-55.5.fits
tests/infrastructure/: test_parse.py
tests/integration/: test_ephemerides.py  test_form.py  test_form_views.py  test_generate_finder_chart.py
tests/viewmodels/: test_parse.py
