[tool.poetry]
name = "finder-chart-generator"
version = "0.1.0"
description = ""
authors = ["Christian Hettlage <hettlage@saao.ac.za>"]
readme = "README.md"
packages = [{include = "fcg"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
jinja2 = "^3.1.2"
astropy = "^5.2.2"
python-multipart = "^0.0.6"
imephu = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = {extras = ["d"], version = "^23.3.0"}
isort = "^5.12.0"
flake8-bugbear = "^23.3.23"
flake8-print = "^5.0.0"
mypy = "^1.2.0"
httpx = "^0.24.0"
pytest-regressions = "^2.4.2"
pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
