[tool.poetry]
name = "finder-chart-generator"
version = "0.1.0"
description = ""
authors = ["Christian Hettlage <hettlage@saao.ac.za>"]
readme = "README.md"
packages = [{include = "fcg"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
jinja2 = "^3.1.2"
astropy = "^5.2.2"
python-multipart = "^0.0.6"
imephu = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = {extras = ["d"], version = "^23.3.0"}
mypy = "^1.2.0"
httpx = "^0.24.0"
pytest-regressions = "^2.4.2"
pillow = "^9.5.0"
ruff = "^0.0.269"
types-pillow = "^9.5.0.4"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]
unfixable = ["B"]
ignore = ["E203", "E501"]
dummy-variable-rgx = "^ignore_me$"
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "numpy"
