[project]
name = "finder-chart-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "fastapi>=0.135.3",
    "imephu>=0.11.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
    "numpy<2.4.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black[d]>=26.3.1",
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "pytest-regressions>=2.10.0",
    "ruff>=0.15.10",
    "types-pillow>=10.2.0.20240822",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
unfixable = ["B"]
ignore = ["E203", "E501"]
dummy-variable-rgx = "^ignore_me$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
